--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
               <div class="form" id="form">
               <a class="cl-btn"><button id="closeFormBtn" class="close-btn">&times;</button></a>
               <h2>Форма</h2>
-              <form id="feedbackForm" action="https://formcarry.com/s/jMSQHlCdYef" method="POST">
+              <form id="feedbackForm" action="https://formcarry.com/s/PAq14HPW4n_" method="POST">
                 <div class="mb-2">
                   <label for="name" class="form-label">ФИО</label>
                     <input type="name" class="form-control" id="exampleInputEmail1" name="name" aria-describedby="emailHelp" required>
